--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,1 +1,10 @@
 @import "normalize.scss";
+@import "fonts.scss";
+
+.ptsans {
+  font-family: "PT Sans", "Arial", sans-serif;
+}
+
+.opensans {
+  font-family: "Open Sans Condensed", "Arial", sans-serif;
+}
