--- a/source/sass/fonts.scss
+++ b/source/sass/fonts.scss
@@ -8,6 +8,15 @@
 }
 
 @font-face {
+  font-family: "PT Sans";
+  src: url("../fonts/PTSans-Bold.woff2") format("woff2"),
+    url("../fonts/PTSans-Bold.woff") format("woff");
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
   font-family: "Open Sans Condensed";
   src: url("../fonts/OpenSansCondensed-Light.woff2") format("woff2"),
     url("../fonts/OpenSansCondensed-Light.woff") format("woff");
