--- a/source/sass/scaffolding.scss
+++ b/source/sass/scaffolding.scss
@@ -5,6 +5,9 @@
 }
 
 body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
   margin: 0 auto;
   padding: 0;
 
@@ -20,19 +23,18 @@ img {
   height: auto;
 }
 
-/*
-При удалении блоков menu, slider, content (catalog) верхняя и нижняя части макета должны быть прижаты к верху и к низу окна браузера соответственно
-*/
 .container {
-  display: flex;
-  flex-direction: column;
   max-width: 1000px;
-  min-height: 100vh;
   margin: 0 auto;
   padding: 0 10px;
+
+  &--header {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
 }
 
 footer {
   margin-top: auto;
 }
-/* ----------- */
