--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,3 +1,5 @@
 @import "normalize.scss";
 @import "fonts.scss";
 @import "scaffolding.scss";
+@import "blocks/header.scss";
+@import "blocks/contacts.scss";
