добавляет разметку и стили для навигационного меню

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,6 +1,9 @@
 @import "normalize.scss";
 @import "fonts.scss";
 @import "scaffolding.scss";
+@import "mixins.scss";
 @import "blocks/header.scss";
 @import "blocks/contacts.scss";
+@import "blocks/main.scss";
+@import "blocks/site-list.scss";
 @import "blocks/slider.scss";
