--- a/source/sass/blocks/slider.scss
+++ b/source/sass/blocks/slider.scss
@@ -1,33 +1,53 @@
-.slider-container {
+.slider__container {
+  @include list-reset;
+
   position: relative;
 
-  height: 150px;
+  height: 400px;
 }
 
-.slide {
+.slider__item {
   position: absolute;
   top: 0;
   left: 0;
 
   opacity: 0;
   width: 100%;
-  height: 100%;
 
-  transition: opacity 1s;
+  transition: opacity 2s;
 
   &--active {
     opacity: 1;
   }
+}
 
-  &--red {
-    background-color: red;
-  }
+.slider__image {
+  width: 100%;
+  height: 400px;
+  object-fit: cover;
+}
 
-  &--green {
-    background-color: green;
-  }
+.slider__controls {
+  position: absolute;
+  top: 50%;
+  left: 50%;
 
-  &--blue {
-    background-color: blue;
-  }
+  display: flex;
+  justify-content: space-between;
+  width: 80%;
+  margin: 0 auto;
+  padding: 0 10px;
+
+  transform: translate(-50%, -50%);
+}
+
+.slider__btn {
+  display: block;
+  margin: 0;
+  padding: 0;
+
+  border: none;
+  background-color: transparent;
+
+  cursor: pointer;
 }
