--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -2,9 +2,13 @@
 @import "fonts.scss";
 @import "scaffolding.scss";
 @import "mixins.scss";
+@import "visually-hidden.scss";
 @import "blocks/header.scss";
 @import "blocks/contacts.scss";
 @import "blocks/main.scss";
 @import "blocks/site-list.scss";
 @import "blocks/slider.scss";
 @import "blocks/breadcrumbs.scss";
+@import "blocks/catalog.scss";
+@import "blocks/navigation.scss";
+@import "blocks/price.scss";
