--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -12,3 +12,5 @@
 @import "blocks/catalog.scss";
 @import "blocks/navigation.scss";
 @import "blocks/price.scss";
+@import "blocks/goods.scss";
+@import "blocks/card.scss";
