добавляет стили для блоков в футере

--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -1,3 +1,14 @@
 .footer {
+  padding: 44px 0 27px;
   background-color: #777777;
+}
+
+.footer__copyright {
+  margin-right: 15%;
+  margin-bottom: 20px;
+}
+
+.footer__navigation {
+  margin-right: 29.4%;
+  margin-bottom: 20px;
 }
