--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -17,3 +17,5 @@
 @import "blocks/pagination.scss";
 @import "blocks/about-us.scss";
 @import "blocks/footer.scss";
+@import "blocks/copyright.scss";
+@import "blocks/studio.scss";
