--- a/source/sass/scaffolding.scss
+++ b/source/sass/scaffolding.scss
@@ -45,6 +45,11 @@ img {
     display: flex;
     align-items: flex-start;
   }
+
+  &--footer {
+    display: flex;
+    flex-wrap: wrap;
+  }
 }
 
 footer {
