--- a/source/sass/blocks/slider.scss
+++ b/source/sass/blocks/slider.scss
@@ -18,7 +18,7 @@
   opacity: 0;
   width: 100%;
 
-  transition: opacity 2s;
+  transition: opacity 1s ease-in;
 
   &--active {
     opacity: 1;
@@ -29,6 +29,7 @@
   width: 100%;
   height: 400px;
   object-fit: cover;
+  font-family: 'object-fit: cover';
 }
 
 .slider__controls {
